prevent portrait phone  images from stretching with object-fit:cover

--- a/src/index.css
+++ b/src/index.css
@@ -599,6 +599,7 @@ button {
   width:100%;
   height:auto;
   aspect-ratio:3/2;
+  object-fit:cover;
 
 }
 
